[tool.poetry]
name = "dreamlink-web"
version = "0.1.0"
description = ""
authors = ["tlonny <t@lonny.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
markdown = "^3.6"
bcrypt = "^4.1.2"
pyjwt = "^2.8.0"
furl = "^2.1.3"
pdoo = "^0.1.5"
boto3 = "^1.34.69"
flask = "^3.0.2"
psycopg2 = "^2.9.9"
gunicorn = "^21.2.0"


[tool.poetry.group.dev.dependencies]
pgcli = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
